Fixing the z-index issue for small browsers using windmill
git-svn-id: http://svn.getwindmill.com/trunk@98 78c7df6f-8922-0410-bcd3-9426b1ad491b

--- a/windmill/js/ide/css/windmill.css
+++ b/windmill/js/ide/css/windmill.css
@@ -25,12 +25,16 @@ a:hover { text-decoration : underline; color : #336699; border: 0px; cursor: poi
 	width:100%;
 	height:100%;
 	border:0px;
+	z-index:1;
 	
 }
 
 #webUI{
     height:20px;
+    width:100%;
     visibility:hidden;
+    z-index:5000;
+    position:absolute;
     
 }
 
@@ -38,6 +42,7 @@ a:hover { text-decoration : underline; color : #336699; border: 0px; cursor: poi
     position:absolute;
     top:0px;
     left:85%;
+    z-index:5001;
 }
 
 #pagediv{
@@ -58,6 +63,7 @@ a:hover { text-decoration : underline; color : #336699; border: 0px; cursor: poi
     height:100%;
     border:0px solid black;
     font-size:10px;
+    z-index:5000;
 
     
 }
@@ -69,6 +75,7 @@ a:hover { text-decoration : underline; color : #336699; border: 0px; cursor: poi
     height:100%;
     border:0px solid black;
     font-size:10px;
+    z-index:5000;
     
 }
 
@@ -79,6 +86,7 @@ a:hover { text-decoration : underline; color : #336699; border: 0px; cursor: poi
     width: 320px;
     height: 80px;
     border: none;
+    z-index:5000;
 
 }
 
@@ -88,6 +96,7 @@ a:hover { text-decoration : underline; color : #336699; border: 0px; cursor: poi
     width: 85%;
     height: 150px;
     border: none;
+    z-index:5000;
 }
 
 #welcome{
@@ -96,6 +105,7 @@ a:hover { text-decoration : underline; color : #336699; border: 0px; cursor: poi
     top: 20px;
     left: 100px;
     font-size:10px;
+    z-index:5000;
 
 }
 
@@ -105,6 +115,7 @@ a:hover { text-decoration : underline; color : #336699; border: 0px; cursor: poi
     top: 20px;
     left: 100px;
     font-size:10px;
+    z-index:5000;
 
 }
 
@@ -114,5 +125,6 @@ a:hover { text-decoration : underline; color : #336699; border: 0px; cursor: poi
     top: 20px;
     left: 100px;
     font-size:10px;
+    z-index:5000;
 
 }
